test/expected/strict_unset_arith.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "before"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$((nope + 1))"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "not-reached"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "before"
]
[Word
  Unquoted "echo"
]
[Word
  ArithmeticExpansion "nope + 1"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "not-reached"
]
before
shit: 3:6: error: Unable to expand 'nope' because the parameter is not set.
     3 |  echo $((nope + 1))
       |       ^~~~~~~~~~~~~ here.
note: Replace it with ${nope-} if empty expansion is desired.
